# swagger.json
@@ -43,7 +43,10 @@
     },
     "/employees/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Employees"
+        ],
+        "description": "Get all Employees",
         "produces": [
           "application/json"
         ],
@@ -54,7 +57,10 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Employees"
+        ],
+        "description": "Create a new Employee",
         "parameters": [
           {
             "name": "body",
@@ -108,7 +114,10 @@
     },
     "/employees/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Employees"
+        ],
+        "description": "Get a single Employee",
         "produces": [
           "application/json"
         ],
@@ -127,7 +136,10 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Employees"
+        ],
+        "description": "Update an existing Employee",
         "parameters": [
           {
             "name": "id",
@@ -185,7 +197,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Employees"
+        ],
+        "description": "Delete an existing Employee",
         "parameters": [
           {
             "name": "id",
@@ -209,7 +224,10 @@
     },
     "/customers/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Customers"
+        ],
+        "description": "Get all Customers",
         "produces": [
           "application/json"
         ],
@@ -220,7 +238,10 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Customers"
+        ],
+        "description": "Create a new Customer",
         "parameters": [
           {
             "name": "body",
@@ -268,7 +289,10 @@
     },
     "/customers/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Customers"
+        ],
+        "description": "Get a single Customer",
         "produces": [
           "application/json"
         ],
@@ -287,7 +311,10 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Customers"
+        ],
+        "description": "Update an existing Customer",
         "parameters": [
           {
             "name": "id",
@@ -339,7 +366,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Customers"
+        ],
+        "description": "Delete an existing Customer",
         "parameters": [
           {
             "name": "id",
